    - Added RTG equipment, unlocked at AEM science, which works as an infinite power source in your armour - however it is bigger and less efficient then other types of equipment.
    - Reworked the coke system entirely, you now unlock coke at late orange science and is crafted in stone coke ovens. You unlock better buildings and better coke production throughout yellow and PTM science.

  Changes:
    - Slightly nerfed research productivity.
    - Changed barium nitrate to use nitric acid.
    - Moved naptha steam cracking into A-ATM.
    - Rerendered and slightly remodelled heating/cooling plating.
    - Moved artillery into metalloid science.
    - Buffed artillery shell AOE size from 4 to 6.
    - Changed stack size of artillery shells from 1 to 2.
    - Changed phosphorous to be behind R-NM science, and be part of its ingredients.
    - Moved lead into its own technology, and moved it to behind P-TM science.
    - Completely rebalanced P-TM sciences recipe and ingredients.
    - Removed basic wiring, and replaced all recipes that used it with tier-appropiate wiring.
    - Removed mini motors, this is to help make setting up early-game malls easier. (no more tally hall in the mini motor mall :pensive:)
    - Changed all logistic chests to take stainless steel chests instead of steel chests, but buffed their storage size to 64.
    - Slightly scaled down the HCl/acidic water/chromic acid icons in metal processing recipes.
    - Increased the stack size of all billets from 100 to 500.
    - Changed francium PTx86 enrichment to always give 11 as an output, instead of a chance between 10-11.
    - Changed CRT framing to take advanced circuits, rather then processing units.
    - Changed polonium-210 recipe to be in chemical plant, instead of assembler.
    - Took a sledgehammer to the recipes that make polonium-210, to make their ratios actually usable by anything that isnt fuel cells.
    - Lowered amount of sulfuric used in bastanite seperation from 20 to 15.